# diabetes_ML

./: README.md  pyproject.toml  requirements.txt
app/: main.py
assets/: style.css
model/: main.py  model.pkl  scaler.pkl  tesitng.ipynb
