[tool.poetry]
name = "diabetes-ml"
version = "0.1.0"
description = ""
authors = ["Michal Wodnicki <michalwodnicki23@gmail.com>"]
readme = "README.md"
packages = [{include = "diabetes_ml"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7"
numpy = "1.23.4"
pandas = "1.5.1"
pickle5 = "0.0.11"
plotly = "5.11.0"
scikit-learn = "1.2.2"
streamlit = "1.22.0"
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
